fix: properly nest group object in api json
